<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mail"
            type="com.exercise.p.emailclient.dto.param.Mail" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/send_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorPrimary"
            app:title="写邮件"
            android:translationZ="2dp">
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    style="@style/Text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/colorTextGrey"
                    android:text="@string/send" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    android:focusable="false"
                    android:text="@={mail.from}"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorTextBlack"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    style="@style/Text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/to"
                    android:textColor="@color/colorTextGrey" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@={mail.to}"
                    android:background="@null"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorTextBlack"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/subject"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:text="@={mail.subject}"
                    android:textColor="@color/colorTextBlack" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/writeEmail"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:text="@={mail.htmlBody}"
                    android:textColor="@color/colorTextBlack" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</layout>

