<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="email"
            type="com.exercise.p.emailclient.dto.param.Email" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/add_account_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorPrimary"
            android:translationZ="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="添加账号"
                android:textColor="#FFF"
                android:textSize="16sp" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp">

            <EditText
                android:id="@+id/add_account_edit_email"
                style="@style/SignEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_sign_edit"
                android:drawableStart="@drawable/icon_email_account"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:text="@={email.account}"
                />

            <EditText
                android:id="@+id/add_account_edit_psw"
                style="@style/SignEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_sign_edit"
                android:drawableStart="@drawable/icon_email_psw"
                android:hint="@string/pswHint"
                android:inputType="textPassword"
                android:lines="1"
                android:text="@={email.password}" />

            <EditText
                android:id="@+id/add_account_edit_smtp_server"
                style="@style/SignEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_sign_edit"
                android:drawableStart="@drawable/icon_email_server"
                android:hint="smtp服务器地址"
                android:inputType="textUri"
                android:lines="1"
                android:text="@={email.smtpServer}" />

            <EditText
                android:id="@+id/add_account_edit_smtp_port"
                style="@style/SignEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_sign_edit"
                android:drawableStart="@drawable/icon_email_port"
                android:hint="smtp服务器端口"
                android:inputType="number"
                android:lines="1"
                android:text="@={email.smtpPort}" />

            <EditText
                android:id="@+id/add_account_edit_pop3_server"
                style="@style/SignEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_sign_edit"
                android:drawableStart="@drawable/icon_email_server"
                android:hint="pop3服务器地址"
                android:inputType="textUri"
                android:lines="1"
                android:text="@={email.pop3Server}" />

            <EditText
                android:id="@+id/add_account_edit_pop3_port"
                style="@style/SignEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_sign_edit"
                android:drawableStart="@drawable/icon_email_port"
                android:hint="pop3服务器端口"
                android:inputType="number"
                android:lines="1"
                android:text="@={email.pop3Port}" />

            <Button
                android:id="@+id/add_account_button_submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_4corner_3dp_themecolor"
                android:text="@string/addAccount"
                android:textColor="#FFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>